style for header and image in area section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                            <div class="header__bottom-container-wrap">
                             <nav>
                                 <ul>
-                                   <li class="current-menu-item"><a href="">Home</a></li>
+                                   <li class="current-menu-item"><a href="./index.html">Home</a></li>
                                    <li><a href="./about-page.html">About us</a></li>
                                    <li><a href="./services-page.html">Service</a></li>
                                    <li><a href="./gallery-page.html">Gallery</a></li>
@@ -324,7 +324,7 @@
                         <div class="services__container-cards-card-description">
                             <h3>Installation of soffit and gutters</h3>
                             <p>Professional installation of soffit and gutters, ensuring property protection and aesthetic enhancement. Trust our expertise.</p>
-                            <a href="" class="btn blue-btn">
+                            <a href="./single-service.html" class="btn blue-btn">
                                 see more info
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
                                 <circle cx="16" cy="16" r="16" fill="white"/>
@@ -338,7 +338,7 @@
                         <div class="services__container-cards-card-description">
                             <h3>Repair of soffit and gutters</h3>
                             <p>Professional fixes for enhanced durability and curb appeal.</p>
-                            <a href="" class="btn blue-btn">
+                            <a href="./single-service.html" class="btn blue-btn">
                                 see more info
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
                                 <circle cx="16" cy="16" r="16" fill="white"/>
@@ -352,7 +352,7 @@
                         <div class="services__container-cards-card-description">
                             <h3>Leaf guard gutters</h3>
                             <p>Innovative solution to prevent leaves and debris from clogging gutters, ensuring efficient water drainage and reducing maintenance hassle.</p>
-                           <a href="" class="btn blue-btn">
+                           <a href="./single-service.html" class="btn blue-btn">
                                 see more info
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
                                 <circle cx="16" cy="16" r="16" fill="white"/>
@@ -366,7 +366,7 @@
                         <div class="services__container-cards-card-description">
                             <h3>Installation deaf guard</h3>
                             <p>Protects against noise hazards. Easy installation for peace of mind.</p>
-                            <a href="" class="btn blue-btn">
+                            <a href="./single-service.html" class="btn blue-btn">
                                 see more info
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
                                 <circle cx="16" cy="16" r="16" fill="white"/>
