--- a/free-page.html
+++ b/free-page.html
@@ -81,7 +81,7 @@
                            <div class="header__bottom-container-wrap">
                             <nav>
                                 <ul>
-                                   <li class="current-menu-item"><a href="">Home</a></li>
+                                   <li ><a href="./index.html">Home</a></li>
                                    <li><a href="./about-page.html">About us</a></li>
                                    <li><a href="./services-page.html">Service</a></li>
                                    <li><a href="./gallery-page.html">Gallery</a></li>
