--- a/gallery-page.html
+++ b/gallery-page.html
@@ -81,10 +81,10 @@
                            <div class="header__bottom-container-wrap">
                             <nav>
                                 <ul>
-                                   <li class="current-menu-item"><a href="">Home</a></li>
+                                   <li ><a href="./index.html">Home</a></li>
                                    <li><a href="./about-page.html">About us</a></li>
                                    <li><a href="./services-page.html">Service</a></li>
-                                   <li><a href="./gallery-page.html">Gallery</a></li>
+                                   <li class="current-menu-item"><a href="./gallery-page.html">Gallery</a></li>
                                    <li><a href="./contact-page.html">Contact us</a></li>
                                 </ul>
                             </nav>
