--- a/contact-page.html
+++ b/contact-page.html
@@ -263,7 +263,7 @@
                 </div>
             </div>
          </section>
-         <section class="area sectionScroll">
+         <section class="area ">
             <div class="container">
                 <div class="area__container">
                     <div class="area__container-info">
@@ -286,7 +286,7 @@
                 </div>
             </div>
         </section>
-        <section class="consultation sectionScroll">
+        <section class="consultation ">
             <div class="container">
                 <div class="consultation__container">
                     <div class="consultation__container-text">
