--- a/single-service.html
+++ b/single-service.html
@@ -201,7 +201,7 @@
                 </div>
             </div>
          </section>
-        <section class="details mb-m">
+        <section class="details mb-m sectionScroll">
             <div class="container">
                 <div class="details__container">
                     <div class="details__container-block">
@@ -233,7 +233,7 @@
                 </div>
             </div>
         </section>
-        <section class="book mb-m">
+        <section class="book mb-m sectionScroll">
             <div class="container">
                 <div class="book__container">
                     <div class="book__container-title column-title">
@@ -295,7 +295,7 @@
                 </div>
             </div>
            </section>
-           <section class="paint mb-m">
+           <section class="paint mb-m ">
             <div class="container">
                 <div class="paint__container">
                     <div class="paint__container-blocks">
@@ -495,7 +495,7 @@
             </div>
             </div>
            </section>
-         <section class="faq mb-m sectionScroll">
+         <section class="faq mb-m ">
             <div class="container">
                 <div class="faq__container">
                     <div class="faq__container-title column-title">
@@ -565,7 +565,7 @@
                 </div>
             </div>
            </section>
-           <section class="area sectionScroll">
+           <section class="area ">
             <div class="container">
                 <div class="area__container">
                     <div class="area__container-info">
@@ -588,7 +588,7 @@
                 </div>
             </div>
            </section>
-           <section class="consultation sectionScroll">
+           <section class="consultation ">
             <div class="container">
                 <div class="consultation__container">
                     <div class="consultation__container-text">
