--- a/about-page.html
+++ b/about-page.html
@@ -449,7 +449,7 @@
              </div>
             </div>
             </section>
-            <section class="area sectionScroll sectionScroll">
+            <section class="area  ">
                 <div class="container">
                     <div class="area__container">
                         <div class="area__container-info">
@@ -472,7 +472,7 @@
                     </div>
                 </div>
                </section>
-               <section class="consultation sectionScroll">
+               <section class="consultation ">
                 <div class="container">
                     <div class="consultation__container">
                         <div class="consultation__container-text">
