--- a/gallery-page.html
+++ b/gallery-page.html
@@ -199,7 +199,7 @@
                 
             </div>
         </section>
-        <section class="area sectionScroll">
+        <section class="area ">
             <div class="container">
                 <div class="area__container">
                     <div class="area__container-info">
@@ -222,7 +222,7 @@
                 </div>
             </div>
            </section>
-           <section class="consultation sectionScroll">
+           <section class="consultation ">
             <div class="container">
                 <div class="consultation__container">
                     <div class="consultation__container-text">
