add burger style

--- a/contact-page.html
+++ b/contact-page.html
@@ -193,9 +193,15 @@
                     </div>
                         <div class="contact__container-info-item">
                             <span>
-                                Phone
+                                Phone (Only message/Nik)
                             </span>
-                            <a href="tel:+19418994009">(+1 ) 9418994009</a>
+                            <a href="tel:9418994009">9418994009</a>
+                    </div>
+                        <div class="contact__container-info-item">
+                            <span>
+                                Phone (Daniel) 
+                            </span>
+                            <a href="tel:+19414836679">9414836679</a>
                     </div>
                         <div class="contact__container-info-item">
                             <span>
