--- a/services-page.html
+++ b/services-page.html
@@ -83,7 +83,7 @@
                                 <ul>
                                    <li ><a href="./index.html">Home</a></li>
                                    <li><a href="./about-page.html">About us</a></li>
-                                   <li class="current-menu-item"><a href="./services-page.html">Service</a></li>
+                                   <li class="current_page_item"><a href="./services-page.html">Service</a></li>
                                    <li><a href="./gallery-page.html">Gallery</a></li>
                                    <li><a href="./contact-page.html">Contact us</a></li>
                                 </ul>
@@ -159,7 +159,8 @@
                             </div>
                            </div>
                            <div class="burgerBtn">
-                            <span class="line"></span>
+                            <span class="btn-menu-line btn-menu-line1"></span>
+                            <span class="btn-menu-line btn-menu-line3"></span>
                          </div>
                 </div>
             </div>
