--- a/contact-page.html
+++ b/contact-page.html
@@ -85,7 +85,7 @@
                                    <li><a href="./about-page.html">About us</a></li>
                                    <li><a href="./services-page.html">Service</a></li>
                                    <li><a href="./gallery-page.html">Gallery</a></li>
-                                   <li class="current-menu-item"><a href="./contact-page.html">Contact us</a></li>
+                                   <li class="current_page_item"><a href="./contact-page.html">Contact us</a></li>
                                 </ul>
                             </nav>
                             <a href="./free-page.html" class="btn blue-btn">
@@ -159,7 +159,8 @@
                             </div>
                            </div>
                            <div class="burgerBtn">
-                            <span class="line"></span>
+                            <span class="btn-menu-line btn-menu-line1"></span>
+                            <span class="btn-menu-line btn-menu-line3"></span>
                          </div>
                 </div>
             </div>
