--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                            <div class="header__bottom-container-wrap">
                             <nav>
                                 <ul>
-                                   <li class="current-menu-item"><a href="./index.html">Home</a></li>
+                                   <li class="current_page_item"><a href="./index.html">Home</a></li>
                                    <li><a href="./about-page.html">About us</a></li>
                                    <li><a href="./services-page.html">Service</a></li>
                                    <li><a href="./gallery-page.html">Gallery</a></li>
