--- a/single-service.html
+++ b/single-service.html
@@ -159,7 +159,8 @@
                             </div>
                            </div>
                            <div class="burgerBtn">
-                            <span class="line"></span>
+                            <span class="btn-menu-line btn-menu-line1"></span>
+                            <span class="btn-menu-line btn-menu-line3"></span>
                          </div>
                 </div>
             </div>
